--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Musings on Software and Data Engineering, as well as delivery of Data Products on time and on budget.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+permalink: /:year/:month/:day/:slug.html
 
 # Build settings
 markdown: kramdown
